--- a/data/gana-coco-10k.yaml
+++ b/data/gana-coco-10k.yaml
@@ -14,7 +14,7 @@ val: images/val2017  # val images (relative to 'path')
 test:  # test images (optional)
 
 # Classes
-nc: 80  # number of classes
+nc: 100  # number of classes
 names: ['person', 'bicycle', 'car', 'motorcycle', 'airplane', 'bus', 'train', 'truck', 'boat', 'traffic light',
         'fire hydrant', 'stop sign', 'parking meter', 'bench', 'bird', 'cat', 'dog', 'horse', 'sheep', 'cow',
         'elephant', 'bear', 'zebra', 'giraffe', 'backpack', 'umbrella', 'handbag', 'tie', 'suitcase', 'frisbee',
@@ -23,4 +23,5 @@ names: ['person', 'bicycle', 'car', 'motorcycle', 'airplane', 'bus', 'train', 't
         'sandwich', 'orange', 'broccoli', 'carrot', 'hot dog', 'pizza', 'donut', 'cake', 'chair', 'couch',
         'potted plant', 'bed', 'dining table', 'toilet', 'tv', 'laptop', 'mouse', 'remote', 'keyboard', 'cell phone',
         'microwave', 'oven', 'toaster', 'sink', 'refrigerator', 'book', 'clock', 'vase', 'scissors', 'teddy bear',
-        'hair drier', 'toothbrush']  # class names
+        'hair drier', 'toothbrush', '81', '82', '83', '84', '85', '86', '87', '88', '89', '90', '91', '92', '93',
+        '94', '95', '96', '97', '98', '99', '100']  # class names
